ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sigo-ingress
  namespace: sigo-ms
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/normas
        pathType: Prefix
        backend:
          service:
            name: normas-api
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sigo-frontend
            port:
              number: 80
  defaultBackend:
    service:
      name: sigo-frontend
      port:
        number: 80
